# hostr

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  package-lock.json  package.json
app/: bundle.js  folder_index.html  index.html  index.js  user_index.html
src/: main.rs  notes.txt
